added creation of relations